--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "app-template",
+  "type": "module",
   "version": "1.0.0",
   "private": true,
   "main": "expo-router/entry",
@@ -51,6 +52,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
+    "expo-updates": "~29.0.16",
     "expo-video": "~3.0.15",
     "expo-web-browser": "~15.0.10",
     "express": "^4.22.1",
@@ -85,6 +87,7 @@
     "concurrently": "^9.2.1",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.31.8",
+    "eas-cli": "^18.0.4",
     "esbuild": "^0.25.12",
     "eslint": "^9.39.2",
     "eslint-config-expo": "~10.0.0",
