--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "app-template",
-  "type": "module",
   "version": "1.0.0",
   "private": true,
   "main": "expo-router/entry",
@@ -56,6 +55,7 @@
     "expo-video": "~3.0.15",
     "expo-web-browser": "~15.0.10",
     "express": "^4.22.1",
+    "firebase": "^12.9.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.14.0",
     "jose": "6.1.0",
@@ -91,6 +91,7 @@
     "esbuild": "^0.25.12",
     "eslint": "^9.39.2",
     "eslint-config-expo": "~10.0.0",
+    "firebase-tools": "^15.7.0",
     "prettier": "^3.7.4",
     "qrcode": "^1.5.4",
     "tailwindcss": "^3.4.17",
